# wbsck-chat-test

./: Cargo.toml
client/: index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
client/src/: App.tsx  main.tsx  types.d.ts
client/src/components/: chat-header.tsx  chat-input.tsx  chat-messages.tsx  message.tsx  sidebar.tsx  typing-indicator.tsx
client/src/lib/: util.ts
client/src/providers/: socket-provider.tsx  user-provider.tsx
frontend/: package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/app/: app.css  root.tsx  types.d.ts
frontend/app/components/: message.tsx
frontend/app/providers/: user-provider.tsx
frontend/app/routes/: home.tsx
src/: main.rs  state.rs
