[package]
name = "wbsck-chat-test"
version = "0.1.0"
edition = "2021"

[dependencies]
socketioxide = {version = "0.16.0", features = ["state"]}
tokio = { version = "1.4", features = ["rt-multi-thread", "macros"] }
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.133"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
axum = "0.8.1"
tower-http = { version = "0.6.1", features = ["cors"] }
chrono = {version = "0.4.39", features = ["serde"]}
tower = "0.5.2"
